test/integration/good/lang/good_semicolons.stan
data {
  ;
   real x;;
  ;
}
transformed data {
   real x_new = 0;;
}
parameters {
   real y;;;
}
transformed parameters {
   real z;;;;
}
model {
   ;;
   int i;;
}

generated quantities {
   ;
}