test/integration/bad/new/ill-formed-expression23.stan
model { real T = 0.0 while;}